<resources>
    <string name="app_name">My Application</string>
    <string name="test">Test</string>
    <string name="mulai">Mulai Sekarang</string>
    <string name="ONLIB">ONLINE LIBRARY</string>
    <string name="signup">SIGN UP</string>
    <string name="username">USERNAME</string>
    <string name="fullname">FULLNAME</string>
    <string name="email">EMAIL</string>
    <string name="address">ADDRESS</string>
    <string name="phonenumber">PHONE NUMBER</string>
    <string name="password">PASSWORD</string>
    <string name="terms_condition">By Signing up you accept the Terms and Condition and Privacy Policy</string>
    <string name="signin">SIGN IN</string>
    <string name="rememberme">Remember me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="penulis">Henry Manampiring</string>
    <string name="bahasa">Bahasa Indonesia</string>
    <string name="jumlah_halaman">312 halaman</string>
    <string name="tanggal_terbit">23 Juni 2018</string>
    <string name="judul">Filosofi Teras</string>
    <string name="baca">BACA</string>
    <string name="pinjam">PINJAM</string>
    <string name="summary">SUMMARY</string>
    <string name="isi_summary"> Buku ini menceritakan tentang filsafat Yunani-Romawi kuno yang ditulis dengan bahasa Indonesia. Dikemas dengan gaya bahasa yang ringan dan sederhana membuat Filosofi Teras cocok dibaca untuk mengisi waktu luang.</string>
    <string name="review">REVIEW</string>
    <string name="isi_review">Bukunya sangat bagus !</string>
    <string name="detail_buku">Detail Buku</string>
    <string name="user1">Putri Ayu</string>
    <string name="jumlah_review">1 Review</string>
    <string name="jumlah_like">1000 Like</string>
    <string name="home">Beranda</string>
    <string name="katalog">Katalog</string>
    <string name="dipinjam">Dipinjam</string>
    <string name="review2">Ulasan</string>
    <string name="akun">Akun</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_detail_buku">DetailBukuActivity</string>
    <string name="usernameAkun">username</string>
    <string name="AnggotaPerpus">Anggota Perpustakaan</string>
    <string name="termscondtext">Terms and Condition</string>
    <string name="keluarAkun">Keluar</string>
</resources>