<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_daftar">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:text="@string/signin"
        android:textAppearance="@style/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/isian"
        android:gravity="left|center"
        android:paddingStart="16sp"
        android:hint="@string/username"
        android:textAppearance="@style/isian"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <EditText
        android:id="@+id/password"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/isian"
        android:gravity="left|center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16sp"
        android:textAppearance="@style/isian"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/username" />

    <CheckBox
        android:id="@+id/terms_condition"
        android:layout_width="125dp"
        android:layout_height="35dp"
        android:layout_marginTop="32dp"
        android:text="@string/rememberme"
        android:textAppearance="@style/inter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="103dp"
        android:layout_height="15dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="40dp"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/forgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.806"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:id="@+id/button_signup"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_signup"
        android:gravity="center_horizontal|center"
        android:text="@string/signup"
        android:textAppearance="@style/poppins"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/button_signin"
        tools:layout_editor_absoluteX="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_signin"
        android:layout_width="282dp"
        android:layout_height="47dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/button_signup"
        android:gravity="center_horizontal|center"
        android:text="@string/signin"
        android:textAppearance="@style/poppins"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:layout_editor_absoluteX="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>