<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/rectangle_1"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="#163062"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/carticon"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="344dp"
        android:background="@drawable/icon_cart"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/taskbar"
        android:layout_width="0dp"
        android:layout_height="77dp"
        android:background="@drawable/taskbar"
        android:gravity="center_horizontal|center"
        android:textAppearance="@style/poppins"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/imageHome"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/hometext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/taskbar"
        app:srcCompat="@drawable/icon_home" />

    <ImageButton
        android:id="@+id/imageKatalog"
        android:layout_width="18dp"
        android:layout_height="20dp"
        android:layout_marginStart="49dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/katalogtext"
        app:layout_constraintStart_toEndOf="@+id/imageHome"
        app:layout_constraintTop_toTopOf="@+id/taskbar"
        app:srcCompat="@drawable/icon_book" />

    <ImageButton
        android:id="@+id/imageDipinjam"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/dipinjamtext"
        app:layout_constraintStart_toEndOf="@+id/imageKatalog"
        app:layout_constraintTop_toTopOf="@+id/taskbar"
        app:srcCompat="@drawable/icon_bookmark" />

    <ImageButton
        android:id="@+id/imageReview"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/reviewtext"
        app:layout_constraintStart_toEndOf="@+id/imageDipinjam"
        app:layout_constraintTop_toTopOf="@+id/taskbar"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/icon_message" />

    <ImageButton
        android:id="@+id/imageAccount"
        android:layout_width="24dp"
        android:layout_height="22dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toTopOf="@+id/accounttext"
        app:layout_constraintStart_toEndOf="@+id/imageReview"
        app:layout_constraintTop_toTopOf="@+id/taskbar"
        app:srcCompat="@drawable/icon_user" />

    <TextView
        android:id="@+id/hometext"
        android:layout_width="34dp"
        android:layout_height="15dp"
        android:layout_marginStart="38dp"
        android:layout_marginBottom="14dp"
        android:gravity="top"
        android:text="@string/home"
        android:textAppearance="@style/taskbar_nyala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/katalogtext"
        android:layout_width="42dp"
        android:layout_height="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="14dp"
        android:gravity="top"
        android:text="@string/katalog"
        android:textAppearance="@style/taskbar_ganyala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hometext" />

    <TextView
        android:id="@+id/dipinjamtext"
        android:layout_width="48dp"
        android:layout_height="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="14dp"
        android:gravity="top"
        android:text="@string/dipinjam"
        android:textAppearance="@style/taskbar_ganyala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/katalogtext" />

    <TextView
        android:id="@+id/reviewtext"
        android:layout_width="39dp"
        android:layout_height="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="14dp"
        android:gravity="top"
        android:text="@string/review2"
        android:textAppearance="@style/taskbar_ganyala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dipinjamtext" />

    <TextView
        android:id="@+id/accounttext"
        android:layout_width="46dp"
        android:layout_height="15dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="14dp"
        android:gravity="top"
        android:text="@string/akun"
        android:textAppearance="@style/taskbar_ganyala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/reviewtext" />
</androidx.constraintlayout.widget.ConstraintLayout>